--- a/Diplom_popitka1/appsettings.json
+++ b/Diplom_popitka1/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=-PC\\MSSQLSERVER01;Database=SLOT;Trusted_Connection=True;"
+    "DefaultConnection": "Server=-PC\\MSSQLSERVER01;Database=diplom_popitca1;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
